# eCommerce-system

./: .editorconfig  Fashion.sln  LICENSE  README.md
Backend/Asset-api/: Asset-api.sln  Program.cs  Readme.md
Backend/Asynchronous-api/: Readme.md  package-lock.json  package.json
Backend/Distributed-api/: .gitignore  package-lock.json  package.json
Backend/Order-api/: .env  .gitignore  Cargo.toml  Makefile.toml  Readme.md  diesel.toml  rustfmt.toml
Backend/Order-api/migrations/2025-03-11-020548_init/: down.sql  up.sql
Backend/Order-api/migrations/2025-03-31-041705_test/: up.sql
Backend/Order-api/src/: api_doc.rs  common.rs  db.rs  lib.rs  main.rs  schema.rs
Backend/Order-api/src/common/: response_model.rs
Backend/Order-api/src/constants/: http_status_constant.rs  mod.rs
Backend/Order-api/src/dtos/: user_dto.rs
Backend/Order-api/src/entities/: coupon.rs  delivery_address.rs  mod.rs  order.rs  order_item.rs  transaction.rs  user.rs
Backend/Order-api/src/helpers/: http_helper.rs  mod.rs
Backend/Order-api/src/middlewares/: mod.rs
Backend/Order-api/src/routes/: user_route.rs
Backend/Order-api/src/services/: user_service.rs
Backend/Order-api/src/traits/: mod.rs
Fashion.API/: Fashion.API.csproj  Fashion.API.http  Program.cs  appsettings.json
Fashion.Application/: DependencyInjection.cs  Fashion.Application.csproj
Fashion.Domain/: Class1.cs  Fashion.Domain.csproj
Fashion.Infrastructure/: DependencyInjection.cs  Fashion.Infrastructure.csproj
Fashion.Presentation/: Fashion.Presentation.csproj  Program.cs  appsettings.json
seed/: script.sql
(+422 files in other folders)
