[package]
name = "order_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
config = "0.14.0"
dotenv = "0.15.0"
num_cpus = "1.16.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.2.0", features = ["macros", "axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"]}
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "numeric", "chrono"] }
uuid = {version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics"
]}
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4.40"
bigdecimal = "0.4.7"
